# estella

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  rustfmt.toml
.github/ISSUE_TEMPLATE/: バグ報告.md  他の問題.md  実装プランの作成.md  機能追加の作成.md
configs/: config.temp.yaml
entity/: Cargo.toml
entity/src/: confirmed_account.rs  enums.rs  guild_config.rs  lib.rs  main_account.rs  pending_account.rs  remind.rs  remind_assignee.rs  sub_account.rs  talk_history.rs  user_data.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20240503_165913_create_table_guild_config.rs  m20240503_165926_create_table_main_account.rs  m20240503_165935_create_table_sub_account.rs  m20240503_165947_create_table_confirmed_account.rs  m20240503_165956_create_table_pending_account.rs  m20240503_170005_create_table_user_data.rs  m20250525_112910_create_table_remind_assignee.rs  m20250525_113749_create_table_remind.rs  m20250601_164835_modify_user_data.rs  m20250604_151741_modify_guild_config.rs  m20250606_155740_modify_level_to_message_counter.rs  m20250606_160312_add_talk_history.rs  tables.rs
sql_files/: create_tables.sql  drop.sql  upsert.sql  user_create.sql
src/: chat.rs  command_define.rs  commands.rs  configs.rs  events.rs  main.rs  tables.rs  utils.rs  voice.rs
src/chat/: param.rs  prompt.rs
src/commands/: config.rs  disconnect.rs  mails.rs  ping.rs  talk.rs  test.rs  user.rs  ver.rs  version.rs
src/commands/mails/: create.rs  remove.rs
src/commands/test/: ok.rs
src/commands/user/: find.rs  reserve.rs  sub_application.rs
src/events/: interaction_event.rs  member_add_event.rs  member_remove_event.rs  message_event.rs  message_remove_event.rs  ready_event.rs  route.rs
src/tables/: account.rs  guild.rs  quaryfn.rs  user.rs
src/utils/: atomic.rs  client.rs  color.rs  convert.rs  enums.rs  glacialeur.rs  response.rs  ui.rs
src/voice/: receive.rs  speak2text.rs  text2speak.rs  text_talk.rs
src/voice/text2speak/: voicevox_core.rs  vvclient.rs
