[package]
name = "estella"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
fern = "0.6.0"
log = "0.4.14"
num-traits = "0.2.14"
once_cell = "1.9.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.8.23"
sha3 = "0.10.0"
sqlx = { version = "0.5.11", features = [ "runtime-tokio-native-tls", "chrono", "mysql" ] }
tokio = { version = "1.16.1", features = ["full"] }

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "cache",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
    "unstable_discord_api",
    "collector"
]
version = "0.10.10"
